@@ -1,3 +1,7 @@
+Sun Dec  8 17:52:24 2013  Kazuki Tsujimoto  <kazuki@callcc.net>
+
+	* object.c: [DOC] document Module#singleton_class?.
+
 Sun Dec  8 16:19:28 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* class.c (rb_get_kwargs): if optional is negative, unknown
